--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://171.244.3.242:3306/quoradb
-spring.datasource.username=cs18quora
-spring.datasource.password=topica123
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
@@ -12,7 +12,6 @@ spring.thymeleaf.prefix=${project.base-dir}/src/main/resources/templates/
 # Static resources reloading during development
 spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
 
-#project.base-dir=file:////home/tungtt7/Quora
 ## Templates reloading during development
 #spring.thymeleaf.prefix=${project.base-dir}/resources/main/templates/
 ## Static resources reloading during development
@@ -21,11 +20,11 @@ spring.resources.static-locations=${project.base-dir}/src/main/resources/static/
 server.port = 8888
 spring.thymeleaf.cache=false
 
-spring.social.facebook.appId=278025672770919
-spring.social.facebook.appSecret=572220ee339b0ce81df9100a4ebee0e9
+spring.social.facebook.appId=
+spring.social.facebook.appSecret=
 
-google.app.id=930932659996-9jvtvg7igq7fm5574b2f5qlbdbm3vh9d.apps.googleusercontent.com
-google.app.secret=K5k99fWhGPulPTl0Zi_heN8l
+google.app.id=
+google.app.secret=
 google.redirect.uri=http://localhost:8888/
 google.link.get.token=https://accounts.google.com/o/oauth2/token
 google.link.get.user_info=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
